--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
   <head>
     <title>Welcome to Myra’s Site!!!</title>
     <link type="text/css" rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
   </head>
   <body>
     <div id="nav">
-        <ul class="menu">
-          <li><a href="#about">Who am I</a></li>
-          <li><a href="#my-work">My Work</a></li>
-          <li><a href="#contact-me">Contact me</a></li>
-        </ul>
+      <button type="button" class="menu-button">三</button>
+      <input type="checkbox" class="menu-button-checkbox">
+      <ul class="menu">
+        <li><a href="#about">Who am I</a></li>
+        <li><a href="#my-work">My Work</a></li>
+        <li><a href="#contact-me">Contact me</a></li>
+      </ul>
     </div>
     <div id="content">
       <div class="container">
@@ -19,29 +22,30 @@
             <img src="img/avator.png" alt="">
           </div>
           <div id="my-info">
-            <h1>I am Ch.Myra</h1>
+            <h1>I am KC</h1>
             <h3>Developer and startup entrepreneur</h3>
             <hr>
             <table>
               <tr>
                 <th>Birth</th>
-                <td>1986</td>
+                <td>1991</td>
               </tr>
               <tr>
                 <th>工作經驗</th>
-                <td>> 3 年，金融領域、網站開發、創業</td>
+                <td>3 年，產業分析、資料分析、網站開發</td>
               </tr>
               <tr>
-                <th>開發技能</th>
-                <td>HTML, CSS, JavaScript, Ruby on Rails, MySQL, GCP</td>
+                <th>技能</th>
+                <td>HTML, CSS, Ruby on Rails, MySQL, Python, Django, VBA, SPSS, STATA</td>
               </tr>
               <tr>
                 <th>學習經歷</th>
-                <td>大航道計劃結業, 2018 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dolore sit rem facere consectetur voluptatem sint, necessitatibus maiores ipsum iusto!<br>ALPHA 大學結業, 2017</td>
+                <td>大航道計劃結業, 2018</td>
               </tr>
             </table>
           </div>
         </div>
+        <br>
         <hr class="bar">
         <div id="my-work"> 
           <h1>This is My Work</h1>
@@ -83,6 +87,7 @@
             </div>
           </div>
         </div>
+        <hr class="bar">
         <div id="contact-me">
           <h1>Contact me</h1>
           <form action="" class="contact-form">
@@ -104,7 +109,6 @@
             </div>
           </form>
         </div>
-        <div class="buttom"></div>
       </div>
     </div>
   </body>
