--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to Myra’s Site!!!</title>
+    <title>Welcome to KC’s Site!!!</title>
     <link type="text/css" rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
   </head>
@@ -32,11 +32,11 @@
               </tr>
               <tr>
                 <th>工作經驗</th>
-                <td>3 年，產業分析、資料分析、網站開發</td>
+                <td>3 年，產業分析、資料分析</td>
               </tr>
               <tr>
                 <th>技能</th>
-                <td>HTML, CSS, Ruby on Rails, MySQL, Python, Django, VBA, SPSS, STATA</td>
+                <td>HTML, CSS, Ruby on Rails, MySQL, Python, VBA, SPSS, STATA</td>
               </tr>
               <tr>
                 <th>學習經歷</th>
